<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title">TITLE</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_details">DETAILS</string>
    <string name="crime_solved">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="no_crime">There\'s no crime</string>
    <string name="crime_suspect_crime">Choose suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
</resources>